# algaesense

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
Resources/: jaxsr_augmentation_spec.md  spirulina_voc_experimentalist_protocol.md
docs/: end_to_end_test_runbook.md  hardware_setup.md  remote_experiment_control.md  remote_storage_setup.md  slack_and_hermes_setup.md
hardware/: BOM.md
hardware/cad/: README.md
